cron/kubernetes/application-deployments/appname-qa/appname-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appname
  namespace: appname-qa
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, PATCH, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://appname-qa.stackexpress.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"


spec:
  tls:
  - hosts:
    - appname-qa.stackexpress.com
    - api.appname-qa.stackexpress.com
    secretName: appname-tls
  rules:
  - host: appname-qa.stackexpress.com
    http:
      paths:
      - backend:
          serviceName: appname-web
          servicePort: 80
        path: /(.*)
  - host: api.appname-qa.stackexpress.com
    http:
      paths:
      - backend:
          serviceName: appname-api
          servicePort: 80
        path: /(.*)
